-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14, 15, 16
-
Component/s: hotspot
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8250938 | 15.0.2 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8251070 | 15.0.1 | Aleksey Shipilev | P2 | Resolved | Fixed | b04 |
After JDK-8247367, we are acquiring the _wait_monitor in ShenandoahPacer::report_internal. That runs into potential deadlocks with threads that are waiting on the same lock *and* safepointing at the same time, against the concurrent workers that want to report the progress before returning for subsequent safepoint.
Also, this introduces latency/scalability hogs on fastpaths in concurrent mark.
We are better off deferring the actual notification to a separate (periodic) task.
Also, this introduces latency/scalability hogs on fastpaths in concurrent mark.
We are better off deferring the actual notification to a separate (periodic) task.
- backported by
-
JDK-8250938 Shenandoah: should not block pacing reporters
-
- Resolved
-
-
JDK-8251070 Shenandoah: should not block pacing reporters
-
- Resolved
-
- relates to
-
JDK-8247367 Shenandoah: pacer should wait on lock instead of exponential backoff
-
- Resolved
-