8247593: Shenandoah: should not block pacing reporters

Reviewed-by: rkennke